deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movies-app
  labels:
    app: movies-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: movies-app
  template:
    metadata:
      labels:
        app: movies-app
    spec:
      containers:
        - name: movies-app
          image: lunabacilio/movies-app
          ports:
            - containerPort: 5000
