service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movies-app
  labels:
    app: movies-app
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
  selector:
    app: movies-app
